--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -424,22 +424,27 @@
               print( catTemplate({ catName:cats[i], cycle:util.cycle('c0','c1'), order:i }) );
     | } if (cats.length > 0 && items.length > 0) { %>
     .divider
-    | <% } for (var i=0;i<items.length;i++) {
-    |         print( itemTemplate({ item:items[i], cycle:util.cycle('c0','c1'), order:i }) );
-    | } %>
+    .items-wrap
+      | <% } for (var i=0;i<items.length;i++) {
+      |         print( itemTemplate({ item:items[i], cycle:util.cycle('c0','c1'), order:i }) );
+      | } %>
   
   script.page_tree-page(type="text/template")
     | <% if (!_maybe.isLeaf) {
+    
     |       for (var i=0; i<cats.length;i++) {
     |         print( catTemplate({ catName:cats[i], cycle:util.cycle('c0','c1'), order:i }) );
     |       } 
     |       if (cats.length > 0 && items.length > 0) { %>
     .divider
-    | <%    } for (var i=0;i<items.length;i++) { %>
-    .leaf-name.item class="<% print(util.cycle('c0','c1')); %> <%if(i==0) print('first');%>"
-      | {{ items[i].name }}
-    | <%    } 
-    | } else { %>
+    | <% } %>
+    .leaves-wrap
+      | <%  for (var i=0;i<items.length;i++) { %>
+      .leaf-name.item class="<% print(util.cycle('c0','c1')); %> <%if(i==0) print('first');%>"
+        | {{ items[i].name }}
+      | <%  } %>
+    
+    | <% } else { %>
     h3 {{ title }}
     .leaf-content {{ content }}
     | <% } %>
@@ -455,7 +460,7 @@
     label Website URL*:
     input(name="url" type="text" value="{{ _maybe.url }}")
   
-  script.event-calendar-edit-area
+  script.event-calendar-edit-area(type="text/template")
     label Your {{ subHelpText }} URL*:
     textarea name="url" type="text" rows="5" cols="30" {{ _maybe.url }}
 
