--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -273,10 +273,10 @@ a img {
     background: url(/images/ui/leaf-arrow.png) 97% 50% no-repeat; }
   .item.category, .item.leaf-name {
     cursor: pointer; }
+  .item:first-child, .category:first-child {
+    border-top: none; }
   .c0, .c1 {
     border-top: 1px solid #d2d2d2; }
-  .first {
-    border-top: none; }
   .divider {
     height: 5px;
     border-top: 1px solid #b3b3b3;
