Reworked mobile site navigation code to accommodate IE7. Man that was annoying. Fixes #421

--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -33,9 +33,7 @@ html lang="en-US"
     javascript:
       $(function () {
         window.mapp = new MobileAppView();
-        // TODO: make widget page links actually work
-        // window.location.href = '#';
-        new MobileAppController();
+        window.router = new MobileAppController();
 
         mapp.fetchWorder(function (worderDoc) {
           mapp.worder = worderDoc.worder;
