Separated mobile preview listener into its own file.

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -40,6 +40,7 @@ html lang="en-US"
     = javascript_include_tag 'support/backbone'
     = javascript_include_tag 'util'
     = render :partial => 'shared/data-loader' if @company
+    = javascript_include_tag 'preview-mobile'
     
     
     = javascript_include_tag 'widgets/mobile/base'
