Updated desktop share buttons. Closes #424

--- a/app/views/builder/_social-share.html.erb
+++ b/app/views/builder/_social-share.html.erb
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-stLight.options({publisher:'ac9391da-2465-423f-a4e3-2c9736d44738'});
+stLight.options({publisher:'780260b0-560d-4d66-b09d-ebf049f3edb5'});
 </script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 
@@ -9,10 +9,10 @@ title = u "YoMobi - The Ultimate Mobile Website Builder"
 %>
 
 <ul class="social-share lfloat">
-  <li><span  class='st_facebook_button' displayText='Facebook'></span></li>
-  <li><span  class='st_twitter_button' displayText='Tweet'></span></li>
-  <li><span  class='st_linkedin_button' displayText='LinkedIn'></span></li>
-  <li><span  class='st_stumbleupon_button' displayText='StumbleUpon'></span></li>
-  <li><span  class='st_google_button' displayText='Google'></span></li>
-  <li><span  class='st_email_button' displayText='Email'></span></li>
+  <li><span  class='st_facebook_button' displayText='Facebook' st_url="http://yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
+  <li><span  class='st_twitter_button' displayText='Tweet' st_url="http://yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
+  <li><span  class='st_linkedin_button' displayText='LinkedIn' st_url="http://yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
+  <li><span  class='st_stumbleupon_button' displayText='StumbleUpon' st_url="http://yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
+  <li><span  class='st_google_button' displayText='Google' st_url="http://yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
+  <li><span  class='st_email_button' displayText='Email' st_url="http://yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
 </ul>
