Sorted ordering of dropdowns. Closes #426

--- a/app/views/builder/_country-options.html.erb
+++ b/app/views/builder/_country-options.html.erb
@@ -1,5 +1,5 @@
 <%
-["United States of America",
+[
 "Afghanistan",
 "Albania",
 "Algeria",
@@ -231,6 +231,7 @@
 "Ukraine",
 "United Arab Emirates",
 "United Kingdom",
+"United States of America",
 "Uruguay",
 "Uzbekistan",
 "Vanuatu",
