--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -548,3 +548,10 @@ div.wysiwyg ul.toolbar {
   text-align: center;
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif; }
+
+// override mobile styling
+#mobile-container {
+  .company-info {
+    .name, .logo { cursor: pointer; }
+  }
+}
