--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -490,3 +490,6 @@ div.wysiwyg ul.toolbar {
   text-align: center;
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif; }
+
+#mobile-container .company-info .name, #mobile-container .company-info .logo {
+  cursor: pointer; }
