Corrected a css class naming bug. Fixes #423

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -516,7 +516,7 @@
       label Allow users to opt-in for text messages.
   
   script.hours-edit-area(type="text/template")
-    .double-time
+    .double-time-input
       input type="checkbox" name="doubleTime"
       b Specify two sets of hours for each day.
 
