Disabled edit settings upload button until a file is selected. Closes #427

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -127,7 +127,7 @@
               td
                 input type="file" name="logo"
               td
-                input.rfloat type="submit" value="Upload"
+                input.rfloat type="submit" value="Upload" disabled="disabled"
         
         .clearfix
 
