--- a/app/views/shared/_recaptcha.html
+++ b/app/views/shared/_recaptcha.html
@@ -4,7 +4,7 @@
        <label for="recaptcha_response_field">Type the two words:  </label>
        <a href="javascript:Recaptcha.reload();">(Get New Words)</a>
     </div>
-    <input type="text" id="recaptcha_response_field" name="recaptcha_response_field" class="text" />
+    <input type="text" id="recaptcha_response_field" name="recaptcha_response_field" autocomplete="off" class="text" />
 </div>
 
 <script type="text/javascript">
