Fixed default country for country dropdown. Closes #431

--- a/app/views/builder/_country-options.html.erb
+++ b/app/views/builder/_country-options.html.erb
@@ -247,6 +247,10 @@
 "Zambia",
 "Zimbabwe"].each do |country| %>
 
-  <option value="<%= country %>"><%= country %></option>
+  <% if country == "United States of America" %>
+    <option value="<%= country %>" selected="selected"><%= country %></option>
+  <% else %>
+    <option value="<%= country %>"><%= country %></option>
+  <% end %>
 
 <% end %>
