--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -356,7 +356,7 @@
   
   script.informed-page(type="text/template")
     .input-wrap
-      p Stay informed with our latest specials, discounts, and announcements. We don't spam and never share your information.
+      p Enter your information to follow the latest news from this site. You can opt out at any time and your information will remain private.
       = form_tag "/#{@company.db_name}/informed/submit", :method => 'post' do
         | <% if (_maybe.optForEmails) { %>
         label Email Address:
