--- a/app/views/home/privacy.html
+++ b/app/views/home/privacy.html
@@ -1,5 +1,7 @@
 <div id="privacy">
 
+<h2>Privacy Policy</h2>
+
 <h3>What information do we collect? </h3>
 
 <p>We collect information from you when you register on our site or fill out a form.</p>
