Added help link to nav bar. Closes #444

--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -1,4 +1,5 @@
 #nav
   a href=destroy_user_session_path Sign Out
+  a href="#" Help
   a href=account_path Account Settings
   a href=builder_main_path Website Builder
