Updated tell-a-friend page and email. Closes #439

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -305,15 +305,11 @@
         br
         input type="text" name="name_from"
         br
-        label Your Email:
-        br
-        input type="text" name="email_from"
-        br
         p.error.response
         br
-        input(type="submit" value="Send")
+        input type="submit" value="Send"
     .thanks-wrap style="display:none"
-      h3 Thank you for sharing our mobile site.
+      h3 Thank you for sharing this site with your friend.
   
   script.booking-page(type="text/template")
     .input-wrap
