--- a/app/views/user_mailer/tell_friend.html.erb
+++ b/app/views/user_mailer/tell_friend.html.erb
@@ -1,5 +1,10 @@
-Your friend <%= @params[:friend_name] %> with email address as <%= @params[:email_from] %>, recommends this mobile site to you: <a href="<%= @params[:company_mobile_url] %>"><%= @params[:company_mobile_url] %></a>
+Your friend, <%= @params[:name_from] %>, recommends this mobile site to you: <a href="<%= @params[:company_mobile_url] %>"><%= @params[:company_mobile_url] %></a>
 <br />
 <br />
 
-Mobilize yourself or your business and make it accessible to mobile devices for free. Free account at: <a href="http://www.yomobi.com">YoMobi.com</a>
+Thank You,
+<br />
+Yomobi
+<br />
+<br />
+Create your own free mobile site at: <a href="http://www.yomobi.com">YoMobi.com</a>
