--- a/app/views/shared/_footer-links.html.erb
+++ b/app/views/shared/_footer-links.html.erb
@@ -1,5 +1,5 @@
 <div class="site-links">
-  <a href="#">About</a>    <span class="dot">&middot;</span>
+  <a href="<%= about_path %>">About</a>    <span class="dot">&middot;</span>
   <a href="<%= privacy_path %>">Privacy</a>  <span class="dot">&middot;</span>
   <a href="<%= terms_path %>">Terms</a>    <span class="dot">&middot;</span>
   <a href="mailto:feedback@yomobi.com">Feedback</a> <span class="dot">&middot;</span>
