--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -247,18 +247,20 @@ div.wysiwyg ul.toolbar {
   }   
   
   .wtab {
+    height: 35px;
     h2 {
       font-size: 16px;
-      position: relative;
-      top: -17px;
-      left: 62px;
+      float: left;
       margin: 0px 0px 0px 0px; }
     h3 {
-      margin: 0px 0px 0px 0px; }
+      float: left;
+      clear: left;
+      margin: 0px 10px 0px 0px;
+    }
     select {
+      float: left;
       position: relative;
-      top: -20px;
-      left: 60px;
+      top: -3px;
     }}
   .logo {
     margin: 10px 0; }
