--- a/app/views/signup/default/step-3.slim
+++ b/app/views/signup/default/step-3.slim
@@ -10,6 +10,7 @@
       $('input[type=file]').click(function () {
         setTimeout(enableUploadButton,0);
       });
+      $('input:file').keypress(function () { return false; });
     }
     else {
       $('input[type=file]').change(enableUploadButton);
