Restrict logo file type selecting to images only (for browsers that support it). Addresses #448

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -125,7 +125,7 @@
               td
             tr
               td
-                input type="file" name="logo"
+                input type="file" name="logo" accept="image/*"
               td
                 input.rfloat type="submit" value="Upload" disabled="disabled"
         
