--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -274,7 +274,7 @@
         p.response.error
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
-      h3 Thanks for your input. We'll be sure to contact you later if needed.
+      h3 Your message has been sent. Thank you for your input.
   
   script.call_back-page(type="text/template")
     .input-wrap
