--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -280,6 +280,10 @@
     .input-wrap
       p Enter your call back information:
       = form_tag "/#{@company.db_name}/call_back/submit", :method => 'post' do
+        label Your Name:
+        br
+        input type="text" name="name"
+        br
         label Your Phone Number:
         br
         input type="text" name="phone"
