--- a/app/views/builder/_social-share.html.erb
+++ b/app/views/builder/_social-share.html.erb
@@ -9,10 +9,10 @@ title = u "YoMobi - The Ultimate Mobile Website Builder"
 %>
 
 <ul class="social-share lfloat">
-  <li><span  class='st_facebook_button' displayText='Facebook' st_url="http://www.yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
-  <li><span  class='st_twitter_button' displayText='Tweet' st_url="http://www.yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
-  <li><span  class='st_linkedin_button' displayText='LinkedIn' st_url="http://www.yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
-  <li><span  class='st_stumbleupon_button' displayText='StumbleUpon' st_url="http://www.yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
-  <li><span  class='st_google_button' displayText='Google' st_url="http://www.yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
-  <li><span  class='st_email_button' displayText='Email' st_url="http://www.yomobi.com" st_title="Share YoMobi with your friends!"></span></li>
+  <li><span  class='st_facebook_button' displayText='Facebook' st_url="http://www.yomobi.com" st_title="The world is on the go. Get mobilized with YoMobi."></span></li>
+  <li><span  class='st_twitter_button' displayText='Tweet' st_url="http://www.yomobi.com" st_title="The world is on the go. Get mobilized with YoMobi."></span></li>
+  <li><span  class='st_linkedin_button' displayText='LinkedIn' st_url="http://www.yomobi.com" st_title="The world is on the go. Get mobilized with YoMobi."></span></li>
+  <li><span  class='st_stumbleupon_button' displayText='StumbleUpon' st_url="http://www.yomobi.com" st_title="The world is on the go. Get mobilized with YoMobi."></span></li>
+  <li><span  class='st_google_button' displayText='Google' st_url="http://www.yomobi.com" st_title="The world is on the go. Get mobilized with YoMobi."></span></li>
+  <li><span  class='st_email_button' displayText='Email' st_url="http://www.yomobi.com" st_title="The world is on the go. Get mobilized with YoMobi."></span></li>
 </ul>
