Informed page copy tweak. Closes #450

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -377,7 +377,7 @@
         p.response.error
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
-      h3 = "Thanks! You'll be kept up to date with #{@company.name} news."
+      h3 Thank you for signing up to follow this site.
 
   script.hours-page(type="text/template")
     - %w(mon tue wed thu fri sat sun).each do |day|
