--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -99,7 +99,7 @@
               td
                 label Site Name:
               td
-                input type="text" name="company_name" value=@company.name maxlength="40"
+                input type="text" name="company_name" value=@company.name maxlength=MAX_COMPANY_NAME_LENGTH
             tr
               td colspan="2"
                 .divider
