--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -10,7 +10,7 @@ window.g = {
   company: "<%=escape_javascript @company.name %>",
   userEmail: "<%=escape_javascript @company.user.email %>",
   keywords: "<%=escape_javascript @company.keywords %>",
-  MAX_CHARS: <%= @max_chars || -1 %>,
+  MAX_TEXT_CHARS: <%= @max_text_chars || -1 %>,
   MAX_COMPANY_NAME_LENGTH: <%= MAX_COMPANY_NAME_LENGTH %>
 };
 window.widgetClasses = {};
