Welcome email now sends correctly, updated copy. Closes #363

--- a/app/views/user_mailer/send_welcome_email.html.erb
+++ b/app/views/user_mailer/send_welcome_email.html.erb
@@ -1,20 +1,16 @@
-Welcome to the mobile-version of your website. This complements the functionality of your existing website to easily view on mobile phones. All desktop websites are not optimized to view on smart phones and will take longer to load pages to it, with your new Yomobi site, it is now easy. You can reach and more customers on their mobile device!
+Thank you for signing up with YoMobi. You're one step closer to expanding your fan base and making it easier for visitors to find you wherever they are. Your mobile site URL is: <a href="<%= URI.encode @mobile_url %>"><%= @mobile_url %></a>
 <br />
 <br />
 
-We have provided a short HTML code ready for you to implement on the index page of your full website. Once implemented, your customers can seamlessly view the mobile version of your site if they input your full website address on their mobile phones. You can access this code under the <a href="http://www.yomobi.com/builder/main#edit-settings">General Settings</a> link of your Mobile Site Builder.
+Use your YoMobi mobile site to complement your existing desktop site. Click here for instructions on how to seamlessly direct visitors to your new mobile site whenever they visit from a mobile device. You can also get instructions at any time by signing in to YoMobi and clicking on the General Settings link in the mobile site builder. <a href="http://www.yomobi.com/builder/main#edit-settings">General Settings link</a> in the mobile site builder.
 <br />
 <br />
 
-Start advertising your full website and you have now confidence that this will load easily on mobile devices.
+Now that you're mobilized, <a href="http://www.sharethis.com/share?publisher=780260b0-560d-4d66-b09d-ebf049f3edb5&title=Check%20out%20my%20YoMobi%20mobile%20site.&url=<%= URI.encode @mobile_url %>">share the news with your friends</a>.
 <br />
 <br />
 
-To access your account, <a href="http://yomobi.com/">follow this link</a>.
-<br />
-<br />
-
-To access your Mobile Redirect HTML code, <a href="http://www.yomobi.com/builder/main#edit-settings">Follow this link</a>.
+To access your YoMobi account, <a href="http://yomobi.com/">click here</a> and sign in.
 <br />
 <br />
 
