Updated call back email copy. Closes #462

--- a/app/views/user_mailer/call_back.html.erb
+++ b/app/views/user_mailer/call_back.html.erb
@@ -1,4 +1,4 @@
-You have a call back request.
+A visitor to <a href="<%= @params[:company_mobile_url] %>">your YoMobi site</a> left you a call back request:
 <br />
 <br />
 
