--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -51,7 +51,7 @@ a img {
 .back-bar {
   width: 100%;
   padding: 0;
-  margin: 12px 0 0 0;
+  margin: 12px 0 12px 0;
   background: url(/images/ui/bg-back-bar.png) repeat-x;
   color: gray; }
   .back-bar .title {
@@ -258,7 +258,7 @@ a img {
 
 .page .content.category .name {
   float: left;
-  width: 70%;
+  width: 97%;
   padding-right: 12px;
   font-size: 16px;
   font-weight: bold; }
@@ -266,8 +266,8 @@ a img {
   width: 100%;
   padding: 0 0 8px 0; }
 .page .content.category .price {
-  float: right;
-  width: 25%;
+  float: left;
+  width: 97%;
   font-size: 16px; }
 .page .content.category .desc {
   width: 97%;
