--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -12,8 +12,6 @@
     width: 1010px;
     margin: 0 auto; }
   #header.signed-out #logo {
-    float: left;
-    width: 198px;
     padding: 8px 0 0 40px;
     font-size: 3em; }
   #header.signed-out form {
@@ -254,10 +252,17 @@ label {
   #account-setup-box h3 {
     margin: 10px 0px 5px 0px; }
   #account-setup-box textarea, #account-setup-box input[type=text], #account-setup-box input[type=password] {
-    width: 450px;
     font-size: 1.2em; }
+  #account-setup-box #user_current_password {
+    width: 450px; }
+  #account-setup-box #user_email, #account-setup-box #user_first_name, #account-setup-box #user_last_name {
+    width: 375px; }
+  #account-setup-box #user_password, #account-setup-box #user_password_confirmation {
+    width: 292px; }
   #account-setup-box input[type=text], #account-setup-box input[type=password] {
     margin-bottom: 10px; }
+  #account-setup-box input[type=submit] {
+    margin-top: 16px; }
   #account-setup-box textarea {
     height: 7em;
     line-height: 110%; }
@@ -278,5 +283,5 @@ label {
   #account-setup-box .already-confirmed {
     font-size: 1.5em; }
 
-#privacy, #terms, #about {
+#privacy, #terms {
   margin: 40px; }
