--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -2,6 +2,8 @@
 html lang="en-US"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    link rel="canonical" href="http://www.yomobi.com"
+    
     = render 'shared/meta-description'
     = render 'shared/meta-keywords'
 
