--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -2,6 +2,7 @@
 html lang="en-US"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    link rel="canonical" href="http://www.yomobi.com"
     
     title = "#{@company.name} | Mobile Website | YoMobi"
     = render 'shared/iphone-meta.html'
