Renamed	"United States of America" to "United States"

--- a/app/views/builder/_country-options.html.erb
+++ b/app/views/builder/_country-options.html.erb
@@ -231,7 +231,7 @@
 "Ukraine",
 "United Arab Emirates",
 "United Kingdom",
-"United States of America",
+"United States",
 "Uruguay",
 "Uzbekistan",
 "Vanuatu",
@@ -247,7 +247,7 @@
 "Zambia",
 "Zimbabwe"].each do |country| %>
 
-  <% if country == "United States of America" %>
+  <% if country == "United States" %>
     <option value="<%= country %>" selected="selected"><%= country %></option>
   <% else %>
     <option value="<%= country %>"><%= country %></option>
