--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -283,5 +283,5 @@ label {
   #account-setup-box .already-confirmed {
     font-size: 1.5em; }
 
-#privacy, #terms {
+#privacy, #terms, #about {
   margin: 40px; }
