--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -292,8 +292,8 @@ div.wysiwyg ul.toolbar {
   }
 }
 
-#builder .follower-panel {
-  padding: 0 0 10px 10px; }
+#builder .follower-section {
+  margin: 0 0 10px 10px; }
 
 #emulator-wrapper {
   float: left;
