--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -11,7 +11,8 @@ window.g = {
   userEmail: "<%=escape_javascript @company.user.email %>",
   keywords: "<%=escape_javascript @company.keywords %>",
   MAX_TEXT_CHARS: <%= @max_text_chars || -1 %>,
-  MAX_COMPANY_NAME_LENGTH: <%= MAX_COMPANY_NAME_LENGTH %>
+  MAX_COMPANY_NAME_LENGTH: <%= MAX_COMPANY_NAME_LENGTH %>,
+  openEditSettings: <%= @open_edit_settings || false %>
 };
 window.widgetClasses = {};
 window.widgetPages = {};
